# quidme

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: frontend-deploy.yml  frontend-dev.yml  frontend-prod.yml  terraform-dev.yml  terraform-prod.yml  update-cloudflare-prod.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: main.tsx  sw.ts
frontend/src/app/: App.tsx  i18n.ts
frontend/src/components/: CognitoProvider.tsx  CreateLinkDialog.tsx  LinkCard.tsx  LocaleLink.tsx  LocaleNavigate.tsx  PaymentLinkShare.tsx  QuidmeLogo.tsx  RequireAuth.tsx  RequireGuest.tsx  RequireNoStripeAccount.tsx  RequireStripeAccount.tsx  SessionLoader.tsx  SubscriptionLinkCard.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: api.ts  auth.ts  config.ts  currency.ts  localeRouting.ts  useAccountStatus.ts  useAuth.ts  useLocaleNavigate.ts  useSeo.ts
frontend/src/locales/: bg.json  de.json  el.json  en.json  it.json  (+3 more)
scripts/: build_lambda.sh  run-app.sh  run-tests.sh  set-config.sh  setup-terraform-cicd-aws.sh  update-cloudflare-prod.sh
terraform/: CLOUDFLARE.md  versions.tf
tests/: conftest.py
tests/e2e/: README.md  test_health.py  test_stripe_e2e.py
tests/integration/: test_event_handler_earnings.py  test_repositories.py
tests/unit/: test_api_routes.py  test_auth.py  test_expire_links_handler.py  test_fees.py  test_handlers.py  test_payment_link_factory.py  test_stripe_event_handler.py  test_stripe_service.py
(+107 files in other folders)
