[project]
name = "payme"
version = "0.1.0"
description = "Stripe Connect payment platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "mangum>=0.17",
  "boto3>=1.34",
  "stripe==14.3.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "python-jose[cryptography]>=3.3",
  "requests>=2.31",
  "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
  "uvicorn>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "moto[dynamodb]>=5.0",
  "localstack>=3.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
addopts = "-v -m 'not e2e_stripe'"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e_stripe: E2E tests that call the real Stripe API (run with: pytest -m e2e_stripe)",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
